# mtool

./: AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/scripts/: gen-latest-json.cjs  gen-latest-json.js
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-03-markdown-drag-drop.md  2026-05-08-auto-update.md
docs/superpowers/specs/: 2026-05-03-markdown-drag-drop-design.md  2026-05-08-auto-update-design.md
public/: theme-init.js
src/: App.tsx  i18n.tsx  index.css  main.tsx  theme.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_search.rs  file_transfer.rs  jar_viewer.rs  lib.rs  main.rs  video_tasks.rs
src/components/: CustomSelect.tsx  ErrorBoundary.tsx  Sidebar.tsx  TopBar.tsx  UpdateModal.tsx
src/pages/: CryptoTool.tsx  DocConverter.tsx  EncoderDecoder.tsx  FileDiff.tsx  FileSearch.tsx  FileTransfer.tsx  JarViewer.tsx  JsonFormatter.tsx  MarkdownEditor.tsx  PasswordGenerator.tsx  Settings.tsx  SqlInBuilder.tsx  TextToQr.tsx  User.tsx  VideoTasks.tsx
