[package]
name = "mtool"
version = "1.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14.1"
image = "0.25.10"
base64 = "0.22.1"
arboard = "3.6.1"
rfd = "0.17.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
get_if_addrs = "0.5"
tokio = { version = "1", features = ["full"] }
notify = "7"
rayon = "1"
zip = "2.2.1"
rand = "0.8"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }
